--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -1,6 +1,10 @@
 <div class="week">
   {#each days as day}
-    <div class="day" class:disabled="day.disabled == true">
+    <div 
+      class="day" 
+      transition:fade
+      class:outside-month="!day.partOfMonth"
+      class:is-today="day.isToday">
       <div class="day--label">
         {day.date.getDate()}
       </div>
@@ -21,19 +25,18 @@
     justify-content: space-around;
   }
   .day { 
-    background: tomato;
     margin: 2px;
-    color: white;
+    color: #4a4a4a;
     font-weight: bold;
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
     flex: 1 0 auto;
     height: auto;
     display: flex; 
     flex-basis: 0;
   }
-  .day.disabled { 
-    background: #eee;
+  .day.outside-month { 
+    opacity: 0.5;
   }
   .day:before { 
     content: '';
@@ -45,5 +48,29 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
+    position: relative;
+    border: 1px solid #fff;
+    border-radius: 50%; 
+    margin: 10%;
+  }
+
+  .day--label:hover { 
+    cursor: pointer;
+    border-color: #f7901e;
+  }
+  .day.is-today { 
+    color: #fff;
+  }
+  .day.is-today .day--label { 
+    opacity: 1; 
+    background: #f7901e;
   }
 </style>
+
+<script>
+  import { fade } from 'svelte-transitions';
+
+  export default {
+    transitions: { fade }
+  }
+</script>
