--- a/src/Components/Popover.html
+++ b/src/Components/Popover.html
@@ -1,3 +1,4 @@
+<svelte:window bind:innerWidth />
 <div class="popover" ref:popover>
   <div class="trigger" on:click="open()">
     <slot name="trigger">
