Modifications to positioning and animation

--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,8 @@ body {
 	color: #333;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: 0; 
+	padding: 0; 
 }
 
 a {
