--- a/src/Components/Popover.html
+++ b/src/Components/Popover.html
@@ -47,8 +47,7 @@
   }
 
   .contents-inner { 
-    opacity: 0;
-    animation: fadeIn 200ms 250ms forwards;
+    animation: fadeIn 400ms forwards;
   }
 
   .contents-wrapper.visible { 
@@ -95,6 +94,9 @@
   @keyframes fadeIn { 
     0% { 
       opacity: 0; 
+    }
+    50% { 
+      opacity: 0;
     }
     100% { 
       opacity: 1; 
