Update to rollup-based timeUtils module

--- a/src/Components/Datepicker.html
+++ b/src/Components/Datepicker.html
@@ -163,9 +163,9 @@
 </style>
 
 <script>
-  import {dayDict,monthDict} from './lib/dictionaries';
-  import {getMonths} from './lib/helpers';
-  import formatDate from 'timeUtils';
+  import { dayDict, monthDict } from './lib/dictionaries';
+  import { getMonths } from './lib/helpers';
+  import { formatDate } from 'timeUtils';
 
   let today = new Date();
   export default { 
