--- a/src/Components/Popover.html
+++ b/src/Components/Popover.html
@@ -1,4 +1,3 @@
-<svelte:window bind:innerWidth />
 <div class="popover" ref:popover>
   <div class="trigger" on:click="open()">
     <slot name="trigger">
@@ -137,9 +136,6 @@
         translateX: 0
       }
     },
-    computed: { 
-      something: ({w,h}) => console.log(w,h) 
-    },
     methods: { 
       getDistanceToEdges() { 
         this.set({open: true})
@@ -176,13 +172,14 @@
         return { translateX, translateY }  
       },
       open() { 
-        console.log('opening');
         this.set({open: true, ...this.getTranslate()});
+        this.fire('opened');
       },
       close() { 
         this.set({shrink:true});
         once(this.refs.contentsAnimated, 'animationend', () => {
           this.set({shrink: false, open: false});
+          this.fire('closed');
         });
       }
     },
