--- a/src/Components/Week.html
+++ b/src/Components/Week.html
@@ -4,11 +4,11 @@
       class="day" 
       class:outside-month="!day.partOfMonth"
       class:is-today="day.isToday"
-      on:click="fire('dateSelected',day)"
+      on:click="fire('dateSelected',day.date)"
     >
       <button 
         class="day--label" 
-        class:selected="day.date.getTime() == selected.getTime()"
+        class:selected="datesAreSameDay(day.date,selected) === true"
       >
         {day.date.getDate()}
       </button>
@@ -61,9 +61,14 @@
     background: none;
     cursor: pointer;
   }
-  .day:hover .day--label,
+  .day:hover .day--label { 
+    background: #efefef;
+    border-color: #efefef;
+  }
+  .day:hover .day--label.selected,
   .day--label.selected { 
     border-color: #f7901e;
+    background: none;
   }
   .day.is-today .day--label { 
     color: #fff;
@@ -71,3 +76,15 @@
     background: #f7901e;
   }
 </style>
+
+<script>
+  export default { 
+    helpers: { 
+      datesAreSameDay(a,b) {
+        return a.getDate() == b.getDate() 
+          && a.getMonth() == b.getMonth()
+          && a.getFullYear() == b.getFullYear()
+      }
+    }
+  }
+</script>
